# bee_customers_service

./: .env.example  .gitignore  AGENTS.md  Dockerfile  INSTRUCTIONS.md  README.fix.md  README.md  README.update.md  alembic.ini  entrypoint.sh  main.py  pyproject.toml  test_db_connection.py  test_start.ps1
.github/workflows/: ci.yml
app/api/: dependencies.py
app/api/routes/: customers.py  gdpr.py  notes.py  tags.py
app/core/: config.py  limiter.py  logging.py  security.py  tracing.py
app/db/: database.py
app/models/: __init__.py  customer.py  customer_history.py  customer_note.py  customer_tag.py
app/schemas/: customer.py  gdpr.py  note.py  tag.py  user.py
app/services/: customer_service.py  event_publisher.py  gdpr_service.py  log_service.py  note_service.py  tag_service.py
migrations/: env.py
migrations/versions/: 8c70b4aaf501_initial.py
scripts/: resend_failed_events.py
tests/: conftest.py
tests/api/: test_avatar_upload.py  test_customers_routes.py  test_health_metrics.py  test_metrics.py  test_notes_routes.py  test_rate_limit.py  test_tags_routes.py  test_unauthorized_access.py
tests/services/: test_customer_service.py  test_event_publisher.py  test_note_service.py  test_tag_service.py
