[project]
name = "bee-customers-service"
version = "0.1.0"
description = ""
authors = [
    { name = "draghiciioan", email = "75200645+draghiciioan@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
packages = [
    { include = "app" }
]
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "aio-pika (>=9.5.5,<10.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "redis (>=4.0.0,<5.0.0)"
]

[project.optional-dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
httpx = "^0.28.1"
pyjwt = "^2.10.1"
aiosqlite = "^0.20.0"